--- a/frontend/app.html
+++ b/frontend/app.html
@@ -18,7 +18,7 @@
             <label for="textInput" class="block mb-2 text-sm font-medium text-gray-700">Your Text</label>
             <textarea id="textInput" rows="5"
                 class="w-full p-4 border border-green-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-green-400 focus:border-transparent"
-                placeholder="Məsələn: Salam, bu mətn səsə çevriləcək..."></textarea>
+                placeholder="Example: Hello. How are you?"></textarea>
         </div>
 
         <div>
@@ -36,7 +36,7 @@
         </div>
 
         <div id="audioSection" class="hidden mt-6 text-center">
-            <p class="mb-2 text-gray-700">Səs hazırdır:</p>
+            <p class="mb-2 text-gray-700">Voice is ready:</p>
             <audio id="audioPlayer" controls class="mx-auto w-full rounded-xl shadow-sm"></audio>
         </div>
     </div>
@@ -146,7 +146,7 @@
                         })
                     });
 
-                }, 50000
+                }, 5000
             )
 
 
